# CGecko

./: CMakeLists.txt  README.md  build.sh
src/: chunk.c  chunk.h  compiler.c  compiler.h  debug.c  debug.h  hand_compilation.c  main.c  memory.c  memory.h  object.c  object.h  scanner.c  scanner.h  table.c  table.h  value.c  value.h  vm.c  vm.h
test/: sqrt2.gk  sqrt2_inline.gk  t1.txt
